fixed filter container on mobile

--- a/less/main.less
+++ b/less/main.less
@@ -210,6 +210,8 @@ footer {
   text-align : left;
   color : @white;
 
+  overflow : auto;
+
   z-index : 1;
 
   transform : translate3d( -100%, 0 ,0 );
